react dom render

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 export AUTH0_API_CLIENT_SECRET="ewcC2Wswru1Xcy_Aq5Z8PMr7AEtbnCq4-905s0KYZt07QFSvuZf57OC-b-aKWa5w"
 export AUTH0_CLIENT_ID="THu9ygYcVXFgiNoZueRans9hNUdvRR0u"
 export AUTH0_DOMAIN="dev-puaom9z0.us.auth0.com"
-export AUTH0_API_AUDIENCE=""
+export AUTH0_API_AUDIENCE="golang-gin"
